// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoadingOverlay Component applies the correct styling 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "rgba(0, 0, 0, 0.7)",
      "bottom": 0,
      "justifyContent": "center",
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
      "zIndex": 1000,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "rgba(38, 20, 60, 0.85)",
        "borderRadius": 16,
        "padding": 32,
      }
    }
  >
    <ActivityIndicator
      color="#00C853"
      size="large"
    />
  </View>
</View>
`;

exports[`LoadingOverlay Component renders correctly with a message 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "rgba(0, 0, 0, 0.7)",
      "bottom": 0,
      "justifyContent": "center",
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
      "zIndex": 1000,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "rgba(38, 20, 60, 0.85)",
        "borderRadius": 16,
        "padding": 32,
      }
    }
  >
    <ActivityIndicator
      color="#00C853"
      size="large"
    />
    <Text
      style={
        [
          {
            "color": "#FFFFFF",
            "fontFamily": "System",
            "fontSize": 16,
          },
          {
            "color": "rgba(255, 255, 255, 0.7)",
            "fontSize": 16,
            "fontWeight": "400",
            "lineHeight": 24,
          },
          {
            "color": "rgba(255, 255, 255, 0.7)",
          },
          null,
          {
            "marginTop": 16,
            "textAlign": "center",
          },
        ]
      }
    >
      Loading your data...
    </Text>
  </View>
</View>
`;

exports[`LoadingOverlay Component renders correctly without a message 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "rgba(0, 0, 0, 0.7)",
      "bottom": 0,
      "justifyContent": "center",
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
      "zIndex": 1000,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "rgba(38, 20, 60, 0.85)",
        "borderRadius": 16,
        "padding": 32,
      }
    }
  >
    <ActivityIndicator
      color="#00C853"
      size="large"
    />
  </View>
</View>
`;
